Work on dashboard, add logout
