# openapi-generator/openapi-spec.yaml
@@ -44,6 +44,16 @@ paths:
               schema:
                 $ref: "#/components/schemas/tokenResponse"
 
+  /drop:
+    post:
+      operationId: dropSession
+      summary: Invalidate session server-side
+      tags:
+        - User
+      responses:
+        200:
+          description: OK
+
   /secured:
     get:
       operationId: securedRoute
