# scriptos-server/src/main/kotlin/dev/piotrwyrw/scriptos/controller/UserController.kt
@@ -7,6 +7,7 @@ import dev.piotrwyrw.scriptos.api.model.TokenResponse
 import dev.piotrwyrw.scriptos.exception.ScriptosException
 import dev.piotrwyrw.scriptos.service.AuthenticationService
 import dev.piotrwyrw.scriptos.service.GroupService
+import dev.piotrwyrw.scriptos.service.SessionService
 import dev.piotrwyrw.scriptos.service.UserService
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
@@ -16,7 +17,8 @@ import org.springframework.web.bind.annotation.RestController
 class UserController(
     val authenticationService: AuthenticationService,
     val userService: UserService,
-    val groupService: GroupService
+    val groupService: GroupService,
+    private val sessionService: SessionService
 ) : UserApi {
 
     override fun userLogin(loginRequest: LoginRequest): ResponseEntity<TokenResponse> {
@@ -27,8 +29,12 @@ class UserController(
 
     override fun userRegister(registerRequest: RegisterRequest): ResponseEntity<Unit> {
         userService.register(registerRequest)
-        groupService.addUserToCommonGroup(registerRequest.username)
+        groupService.handleNewUser(registerRequest.username)
         return ResponseEntity.ok().build()
     }
 
+    override fun dropSession(): ResponseEntity<Unit> {
+        sessionService.invalidateSession()
+        return ResponseEntity.ok().build()
+    }
 }
